# numa_mask_gen

./: .gitignore  README.md  numa_mask_gen.py  setup.cfg
conda/: meta.yaml
numa_mask_gen/: __init__.py  __main__.py  numa_mask_gen.py
