[metadata]
name = numa_mask_gen
version = 0.2.0
author = Seth Underwood
description = Tool to generate a MPI pinning map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/underwoo/numa_mask_gen
project_urls =
    Bug Tracker = https://github.com/underwoo/numa_mask_gen/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir=
   =.
python_required = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
   numa_mask_gen = numa_mask_gen.__main__:main
